# GenerativeMIDI

./: .gitignore  .gitmodules  BUILD_VERIFICATION.md  CHANGELOG.md  CMakeLists.txt  DEPLOYMENT_COMPLETE.md  GenerativeMIDI.jucer  JUCE  LICENSE  LOAD_IOS_GUIDE.md  ORGANIZATION_PLAN.md  PROJECT_SUMMARY.md  README-iOS.md  README.md  REORGANIZATION_COMPLETE.md  STATUS.md  SUBMODULE_MIGRATION_COMPLETE.md  build_ios.sh
.github/workflows/: ios-build.yml
Source/: PluginEditor.cpp  PluginEditor.cpp.bak  PluginEditor.cpp.bak2  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/Core/: AlgorithmicEngine.cpp  AlgorithmicEngine.h  EuclideanEngine.cpp  EuclideanEngine.h  GateLengthController.h  MIDIGenerator.cpp  MIDIGenerator.h  PolyrhythmEngine.cpp  PolyrhythmEngine.h  PresetManager.cpp  PresetManager.h  RatchetEngine.h  ScaleQuantizer.h  StochasticEngine.cpp  StochasticEngine.h  SwingEngine.h
Source/DSP/: ClockManager.cpp  ClockManager.h  EventScheduler.cpp  EventScheduler.h
Source/Modulation/: ModulationMatrix.h  ModulationSource.h
Source/UI/: CustomLookAndFeel.h  ModulationPanel.h  ModulationTarget.h  PatternAreaTabs.h  PatternVisualizer.h  PolyrhythmLayerEditor.h  PresetBrowser.cpp  PresetBrowser.h
art/: README.md
art/catalog/: ASSET_CATALOG.md  JUCE_INTEGRATION_EXAMPLE.cpp  ORIGINAL_CONCEPT_README.md  QUICK_START.md  ui_elements.json
art/tools/: HYBRID_GENERATOR_GUIDE.md  QUICK_START.md  README.md  extract_priority_assets.py  extract_priority_assets.sh  hybrid_ui_generator.py
docs/: README.md
docs/design/: ANIMATION_STORYBOARD.md  COLOR_PALETTE.md  COMPONENT_SPECS.md  GILDED_COMPONENTS.md  GILDED_STEAMPUNK_PALETTE.md  README.md  SYNAPTIK_UI_SPEC.md
docs/developer/: BUILD.md  BUILDING-iOS.md  CHANGELOG_GUIDE.md  ENHANCEMENTS.md
docs/sessions/: 2025-10-17.md  2025-10-18-continued.md  2025-10-18.md  README.md
docs/user/: FEATURES.md  GETTING_STARTED.md  PRESET_GUIDE.md  REAPER_QUICK_START.md
